--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
-
- 
+<html>
+<head>
+  <meta charset="UTF-8">
+  <script language="javascript" src="libraries/p5.js"></script>
+  <script language="javascript" src="libraries/p5.sound.js"></script>
+  
 </head>
-  <body>
-    <main>
-    </main>
-    <script src="sketch.js"></script>
-  </body>
+
+<body>
+  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+</body>
 </html>
