--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script language="javascript" src="libraries/p5.js"></script>
-  <script language="javascript" src="libraries/p5.sound.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
   
 </head>
 
