--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js'></script>
   
 </head>
 
 <body>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script src='sketch.js'></script>
 </body>
 </html>
